# fast_api_nxt

./: .gitignore  mile.txt  pyproject.toml  requirements.txt
